AR_RU_02 : Header : Re styled header, added animation to sidebar

--- a/src/styles/abstracts/mixins/_button.scss
+++ b/src/styles/abstracts/mixins/_button.scss
@@ -1,15 +1,6 @@
-@mixin button(
-    $background-color,
-    $border-radius,
-    $border,
-    $padding,
-    $color,
-    $font-size
-) {
+@mixin button($background-color, $border-radius, $border, $padding) {
     background-color: $background-color;
     border: $border;
     border-radius: $border-radius;
     padding: $padding;
-    color: $color;
-    font-size: $font-size;
 }
