--- a/src/styles/pages/_header.scss
+++ b/src/styles/pages/_header.scss
@@ -15,14 +15,31 @@
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+.blur-overlay {
+    position: absolute;
+    z-index: $z-index; // 50
+    height: 100vh;
+    width: 100vw;
+}
+
+.blur-overlay--active {
+    backdrop-filter: blur(20px);
+}
 
 // Mobile-first
 .header {
+    width: 100vw;
+    position: fixed;
+    z-index: $z-index + 10;
+    backdrop-filter: blur(20px);
+    background-color: transparent;
     padding: 3.9rem 2rem;
     @include flex(space-between, center);
 
     &__logo,
     &__hamburger {
+        z-index: $z-index + 10; // 60
+
         @include flex(center, center);
         font-size: 4rem;
     }
@@ -45,6 +62,7 @@
     }
 
     &__nav-links {
+        z-index: $z-index + 10;
         @include text(
             $circular-md,
             $midnight-express,
@@ -87,6 +105,7 @@
 @include tablet {
     .header {
         padding: 3.2rem 6.4rem;
+
         // Display
         &__auth {
             display: block;
@@ -119,6 +138,7 @@
         }
 
         &__nav-links {
+            z-index: $z-index + 10;
             position: absolute;
             width: 4rem;
             background-color: $white;
@@ -128,7 +148,7 @@
             flex-direction: column;
             gap: 5rem;
             width: 35%;
-            height: 50%;
+            height: fit-content;
             left: 6.4rem;
             border-radius: 2rem;
         }
