AR_RU_02 : Header : Corrected nav-links color

--- a/src/styles/abstracts/variables/_colors.scss
+++ b/src/styles/abstracts/variables/_colors.scss
@@ -4,4 +4,4 @@ $outrageous-orange: #ff5722;
 $kournikova-yellow: #facd49;
 $white: #ffffff;
 $black: #000000;
-$midnight-express: #191825;
+$midnight-express: #19182580;
