--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -33,6 +33,9 @@ p {
     margin: 0;
     font-weight: normal;
     overflow-wrap: break-word;
+    white-space: no-wrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 img,
