--- a/src/styles/abstracts/variables/_paths.scss
+++ b/src/styles/abstracts/variables/_paths.scss
@@ -1,4 +1,4 @@
-$path-circular-md: '/fonts/CircularStd-Medium.woff';
-$path-circular-bold1: '/fonts/CircularStd-Bold.woff';
-$path-circular-bold2: '/fonts/CircularStd-Black.woff';
-$path-inter: '/fonts/Inter-Regular.woff';
+$path-circular-md: '/fonts/Circular/CircularStd-Medium.woff';
+$path-circular-bold1: '/fonts/Circular/CircularStd-Bold.woff';
+$path-circular-bold2: '/fonts/Circular/CircularStd-Black.woff';
+$path-inter: '/fonts/Inter/Inter-Regular.woff';
