--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -3,14 +3,11 @@
 
 //icomoon styling
 .icon-work-1 {
-    color: $french-rose;
+    font-size: 2rem;
 }
 
 .icon-play-circle5-1 {
     font-size: 2.4rem;
-}
-.icon-play-circle5-1 {
-    color: $slate-blue;
 }
 
 // Mobile
@@ -20,7 +17,7 @@
 
     @include flex(center, center);
     flex-direction: column;
-    gap: 3.2rem;
+    gap: 2.8rem;
 
     &__content {
         @include flex(center, center);
@@ -44,21 +41,18 @@
 
     &__heading {
         height: fit-content;
-        padding-top: 1.6rem;
+        padding: 1rem 3.5rem;
         @include text($circular-md, $black, 4rem, $font-weight-400, 0);
         text-overflow: ellipsis;
         max-height: 50rem;
         max-width: 100%;
     }
 
-    &__heading span {
-        color: $french-rose;
-    }
-
     &__sub-heading {
         @include text($inter, $midnight-express, 1.6rem, $font-weight-400, 0);
         max-block-size: 20rem;
         overflow: hidden;
+        padding: 0 1rem;
     }
     &__btns {
         padding-top: 2.4rem;
@@ -76,11 +70,15 @@
 }
 
 .co-partners {
+    padding-top: 5rem;
     width: 100%;
     @include flex(center, center);
-    gap: 2.7rem;
     flex-wrap: wrap;
-    padding: 6.4rem 1rem;
+    gap: 2rem;
+    &__img {
+        height: 2rem;
+        width: fit-content;
+    }
 }
 
 .actions {
@@ -102,12 +100,12 @@
 }
 
 .explore-btn__content {
-    @include text($circular-md, $french-rose, 1.4rem, $font-weight-400, 0);
+    @include text($circular-md, inherit, 1.4rem, $font-weight-400, 0);
 }
 
 @include tablet {
     .hero {
-        gap: 4.3rem;
+        gap: 5.3rem;
 
         &__img {
             height: auto;
@@ -118,10 +116,12 @@
 
         &__heading {
             font-size: 5.6rem;
+            padding: 4rem 18rem;
         }
 
         &__sub-heading {
             font-size: 1.8rem;
+            padding: 0rem 28rem;
         }
 
         &__btns {
@@ -132,15 +132,25 @@
 
         &__triangles {
             display: block;
-            top: 140rem;
+            top: 126rem;
+            left: 4rem;
         }
 
         &__content {
             width: 100%;
         }
     }
+
     .co-partners {
-        padding: 6.4rem 16.4rem;
+        padding: 14.4rem 20.4rem;
+        width: 100%;
+        @include flex(center, center);
+        flex-wrap: wrap;
+        gap: 2rem;
+        &__img {
+            height: 3rem;
+            width: fit-content;
+        }
     }
 
     .actions {
@@ -155,54 +165,42 @@
 
 @include desktop {
     .hero {
-        padding: 15rem 15rem 0 15rem;
         flex-direction: row-reverse;
-
-        &__img {
-            height: auto;
-            width: 100%;
-            min-width: 50%;
-            padding: 3rem 12rem;
-        }
-
-        &__heading {
-            font-size: 5.6rem;
-        }
-
-        &__sub-heading {
-            font-size: 1.8rem;
-        }
-
-        &__btns {
-            flex-direction: row;
-            width: auto;
-            gap: 1.6rem;
-        }
-
+        padding: 22.5rem 15rem 2rem 15rem;
+        @include flex(center, center);
         &__content {
-            // justify-content: left;
-            align-items: baseline;
-            gap: 4rem;
-            text-align: left;
-            width: 40%;
+            width: fit-content;
+            max-width: 35%;
+            padding: 0;
+            @include flex(center, baseline);
+            gap: 1rem;
         }
-        &__triangles {
-            display: block;
-
-            top: 70rem;
+        &__explore-btn {
+            margin-top: 4.5rem;
+        }
+        &__heading,
+        &__sub-heading {
+            text-align: left;
+            padding: 0;
+        }
+        &__heading {
+            font-size: 6.9rem;
+            line-height: normal;
+            margin-top: 4rem;
+        }
+        &__sub-heading {
+            margin-top: 3rem;
+            text-align: left;
         }
     }
 
     .actions {
+        flex-direction: row;
+        width: fit-content;
+        &__get-started,
         &__watch-demo {
-            @include flex(center, center);
-            gap: 1.5rem;
-            flex-wrap: nowrap;
+            padding: 1.6rem 3.2rem;
             white-space: nowrap;
         }
-    }
-
-    .co-partners {
-        gap: 15rem;
     }
 }
