--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -185,4 +185,12 @@
             width: fit-content;
         }
     }
+
+    .co-partners {
+        margin-top: 10rem;
+        gap: 8rem;
+        &__img {
+            height: 3.5rem;
+        }
+    }
 }
