AR_RU_05 : Travel : Developed a pixel perfect and responsive travel section

--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -188,4 +188,12 @@
             width: fit-content;
         }
     }
+
+    .co-partners {
+        margin-top: 10rem;
+        gap: 8rem;
+        &__img {
+            height: 3.5rem;
+        }
+    }
 }
