--- a/src/styles/abstracts/mixins/_typography.scss
+++ b/src/styles/abstracts/mixins/_typography.scss
@@ -1,8 +1,10 @@
-/* Mixin for font-face
-   $name - Name of the font-family
-   $src - Path of the font file.
-   $font-weight - Font-weight of text
-   $font-style - font-style of the text */
+/* 
+    Mixin for font-face
+    $name - Name of the font-family
+    $src - Path of the font file.
+    $font-weight - Font-weight of text
+    $font-style - font-style of the text 
+*/
 
 @mixin font-face($name, $src, $font-weight, $font-style) {
     @font-face {
