--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,27 +1,68 @@
 @use '../abstracts/variables/colors' as *;
 
-.purple {
+// Classes for color property of text
+
+.purple-text {
     color: $slate-blue;
 }
 
-.yellow {
+.yellow-text {
     color: $kournikova-yellow;
 }
 
-.white {
+.white-text {
     color: $white;
 }
 
-.black {
+.black-text {
     color: $black;
 }
 
-.orange {
+.orange-text {
     color: $outrageous-orange;
 }
 
-.gradient-left-to-right {
+.grey-text {
+    color: $midnight-express;
+}
+// Classes for background-color property
+
+.purple-bg {
+    background-color: $slate-blue;
+}
+
+.yellow-bg {
+    background-color: $kournikova-yellow;
+}
+
+.orange-bg {
+    background-color: $outrageous-orange;
+}
+
+.pink-bg {
+    background-color: $french-rose;
+}
+
+.white-bg {
+    background-color: $white;
+}
+
+.black-bg {
+    background-color: $black;
+}
+
+.transparent-bg {
+    background-color: transparent;
+}
+// Gradients
+.gradient-purple-to-pink {
     background: linear-gradient(to left, $slate-blue, $french-rose);
     background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.box-shadow-btns {
+    box-shadow:
+        0px 0px 0px 0px #0000001a,
+        0px 41px 89px 0px #0000001a;
 }
