AR_RU_03 : Hero section : Made use of components everywhere

--- a/src/styles/abstracts/_utilities.scss
+++ b/src/styles/abstracts/_utilities.scss
@@ -30,6 +30,10 @@
     color: $outrageous-orange;
 }
 
+.pink-text {
+    color: $french-rose;
+}
+
 .grey-text {
     color: $midnight-express-50;
 }
