--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -1,71 +1,99 @@
 @use '../abstracts/mixins/' as *;
 @use '../abstracts/variables/' as *;
 
-//icomoon styling
-.icon-work-1 {
-    font-size: 2rem;
-}
-
-.icon-play-circle5-1 {
-    font-size: 2.4rem;
-}
-
-// Mobile
 .hero {
-    // padding-top: 12rem;
-    padding: 14.6rem 1.2rem 0 1.2rem; //to make space for header (mobile)
+    padding-top: $header-h-mobile;
+    @include flex($flex-direction: column, $gap: 3.2rem);
+    @include tablet {
+        gap: 8.5rem;
+    }
 
-    @include flex(center, center);
-    flex-direction: column;
-    gap: 2.8rem;
+    @include desktop {
+        padding-top: $header-h-desktop;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+
+        &__img {
+            width: 77.2rem;
+            height: 71.3rem;
+        }
+    }
 
     &__content {
-        @include flex(center, center);
-        flex-direction: column;
-        text-align: center;
-        width: 100%;
+        @include flex($flex-direction: column, $gap: 2.2rem);
+        @include tablet {
+            gap: 5rem;
+        }
+
+        @include desktop {
+            width: 42rem;
+            height: 57rem;
+
+            @include flex(baseline, baseline, column, 4.3rem);
+        }
     }
 
-    &__img {
-        height: auto;
-        width: 100%;
-        min-height: 50%;
-    }
-
-    &__explore-btn {
-        @include button($white, 10rem, none, 1.6rem 3.2rem);
-        box-shadow:
-            5px 5px 20px 1px $midnight-express,
-            0 0 0 0 black;
+    &__explore-button {
+        box-shadow: $box-shadow-hover-effect;
+        font-size: 1.4rem;
     }
 
     &__heading {
-        height: fit-content;
-        padding: 1rem 3.5rem;
-        @include text($circular-md, $black, 4rem, $font-weight-400, 0);
-        text-overflow: ellipsis;
-        max-height: 50rem;
-        max-width: 100%;
+        font-weight: 400;
+        font-size: 4rem;
+        padding: 0 2rem;
+        @include desktop {
+            font-size: 6.9rem;
+        }
+    }
+
+    @include tablet {
+        &__heading {
+            font-size: 5.6rem;
+            padding: 0 15rem;
+        }
     }
 
     &__sub-heading {
-        @include text($inter, $midnight-express, 1.6rem, $font-weight-400, 0);
-        max-block-size: 20rem;
-        overflow: hidden;
-        padding: 0 1rem;
-    }
-    &__btns {
-        padding-top: 2.4rem;
-        @include flex(center, center);
-        gap: 2.4rem;
-        flex-direction: column;
+        font-size: 1.6rem;
+        @include tablet {
+            font-size: 1.8rem;
+            padding: 0 23rem;
+        }
     }
 
-    &__triangles {
-        position: absolute;
-        top: 100rem;
-        left: 1rem;
-        display: none;
+    &__heading,
+    &__sub-heading {
+        text-align: center;
+        line-height: normal;
+        @include desktop {
+            text-align: left;
+            padding: 0;
+        }
+    }
+}
+
+.actions {
+    width: 100%;
+    @include flex($flex-direction: column, $gap: 2.4rem);
+    &__get-started,
+    &__watch-demo {
+        width: 100%;
+        font-size: 1.4rem;
+    }
+
+    &__watch-demo {
+        border: 1px solid #eeeeee;
+    }
+
+    @include tablet {
+        width: fit-content;
+        @include flex;
+        white-space: nowrap;
+    }
+
+    @include desktop {
+        @include flex;
     }
 }
 
@@ -79,69 +107,8 @@
         height: 2rem;
         width: fit-content;
     }
-}
 
-.actions {
-    width: 100%;
-    &__get-started {
-        @include button($slate-blue, 10rem, none, 2.4rem 3.2rem);
-        width: 100%;
-        @include text($circular-md, #eeeeee, 1.4rem, $font-weight-400, 0);
-        box-shadow: 10px 12px 35px 10px $midnight-express;
-    }
-    &__watch-demo {
-        @include button($white, 10rem, none, 2.4rem 3.2rem);
-        width: 100%;
-    }
-}
-
-.watch-demo__text {
-    @include text($circular-md, $black, 1.4rem, $font-weight-400, 0);
-}
-
-.explore-btn__content {
-    @include text($circular-md, inherit, 1.4rem, $font-weight-400, 0);
-}
-
-@include tablet {
-    .hero {
-        gap: 5.3rem;
-
-        &__img {
-            height: auto;
-            width: 100%;
-            min-width: 50%;
-            padding: 3rem 12rem;
-        }
-
-        &__heading {
-            font-size: 5.6rem;
-            padding: 4rem 18rem;
-        }
-
-        &__sub-heading {
-            font-size: 1.8rem;
-            padding: 0rem 28rem;
-        }
-
-        &__btns {
-            flex-direction: row;
-            width: auto;
-            gap: 1.6rem;
-        }
-
-        &__triangles {
-            display: block;
-            top: 126rem;
-            left: 4rem;
-        }
-
-        &__content {
-            width: 100%;
-        }
-    }
-
-    .co-partners {
+    @include tablet {
         padding: 14.4rem 20.4rem;
         width: 100%;
         @include flex(center, center);
@@ -153,54 +120,15 @@
         }
     }
 
-    .actions {
-        &__watch-demo {
-            @include flex(center, center);
-            gap: 1rem;
-            flex-wrap: nowrap;
-            text-wrap: nowrap;
-        }
-    }
-}
-
-@include desktop {
-    .hero {
-        flex-direction: row-reverse;
-        padding: 22.5rem 15rem 2rem 15rem;
-        @include flex(center, center);
-        &__content {
+    @include desktop {
+        padding: 20rem 20rem;
+        width: 100%;
+        @include flex;
+        gap: 5rem;
+        flex-wrap: wrap;
+        img {
+            height: 3.2rem;
             width: fit-content;
-            max-width: 35%;
-            padding: 0;
-            @include flex(center, baseline);
-            gap: 1rem;
-        }
-        &__explore-btn {
-            margin-top: 4.5rem;
-        }
-        &__heading,
-        &__sub-heading {
-            text-align: left;
-            padding: 0;
-        }
-        &__heading {
-            font-size: 6.9rem;
-            line-height: normal;
-            margin-top: 4rem;
-        }
-        &__sub-heading {
-            margin-top: 3rem;
-            text-align: left;
-        }
-    }
-
-    .actions {
-        flex-direction: row;
-        width: fit-content;
-        &__get-started,
-        &__watch-demo {
-            padding: 1.6rem 3.2rem;
-            white-space: nowrap;
         }
     }
 }
