--- a/src/styles/abstracts/mixins/_flex.scss
+++ b/src/styles/abstracts/mixins/_flex.scss
@@ -3,19 +3,21 @@
     $justify-content - justify-content property of flex containers (default : center)
     $align-items - align-items property of flex containers (default : center)
     $flex-direction- flex-direction property of flex containers (default : row)
-    $gap - gap property of flex containers (default : 1.6rem)
-    Note : 1.6rem is the most consistent gap in flex containers in this website design
+    $gap - gap property of flex containers (default : 0)
+    $flex-wrap - flex wrap property of flex containers (default : wrap)
 */
 
 @mixin flex(
     $justify-content: center,
     $align-items: center,
     $flex-direction: row,
-    $gap: 1.6rem
+    $gap: 0,
+    $flex-wrap: wrap
 ) {
     display: flex;
     justify-content: $justify-content;
     align-items: $align-items;
     flex-direction: $flex-direction;
     gap: $gap;
+    flex-wrap: $flex-wrap;
 }
