--- a/src/styles/abstracts/mixins/_responsiveness.scss
+++ b/src/styles/abstracts/mixins/_responsiveness.scss
@@ -1,10 +1,15 @@
 @use '../variables/breakpoints' as *;
 
+@mixin mobile {
+    @media (width < map-get($breakpoints, mobile)) {
+        @content;
+    }
+}
+
 /* 
     Mixin for responsiveness on tablet screens
     Contains a media query for screens greater than breakpoint for mobile and less than that of desktop 
 */
-
 @mixin tablet {
     @media (width <= map-get($breakpoints, tablet)) and (width > map-get($breakpoints, mobile)) {
         @content;
@@ -15,7 +20,6 @@
     Mixin for responsiveness on desktop screens
     Contains a media query for screens greater than breakpoint for tablet 
 */
-
 @mixin desktop {
     @media (width > map-get($breakpoints, tablet)) {
         @content;
