--- a/src/styles/abstracts/variables/_fonts.scss
+++ b/src/styles/abstracts/variables/_fonts.scss
@@ -6,3 +6,6 @@ $circular-bold2: 'circular-bold2';
 $font-weight-400: 400;
 $font-weight-700: 700;
 $font-weight-900: 900;
+
+$font-size-md: 1.4rem;
+$font-size-xl: 4rem;
