--- a/src/styles/abstracts/variables/_colors.scss
+++ b/src/styles/abstracts/variables/_colors.scss
@@ -4,4 +4,9 @@ $outrageous-orange: #ff5722;
 $kournikova-yellow: #facd49;
 $white: #ffffff;
 $black: #000000;
-$midnight-express: #19182580;
+$midnight-express-50: #19182580;
+$shadow-color-1: #0000001a;
+$shadow-color-2: #00000017;
+$shadow-color-3: #0000000d;
+$shadow-color-4: #00000003;
+$shadow-color-5: #00000000;
