--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -3,117 +3,110 @@
 
 .header {
     width: 100vw;
-
     position: fixed;
-    z-index: $z-index-header;
+    z-index: map-get($map: $z-index, $key: header);
     backdrop-filter: blur(20px);
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
 
-    padding: 3.9rem 1.5rem;
+    @include flex(space-between, $flex-wrap: nowrap);
+
     @include tablet {
-        padding: 3.6rem 6.2rem;
+        padding-top: 3.2rem;
+        padding-bottom: 3.2rem;
     }
 
     @include desktop {
-        padding: 6.2rem 15rem;
+        padding-top: 6.5rem;
+        padding-bottom: 6.5rem;
     }
 
-    @include flex(space-between);
-
-    &__logo,
-    &__hamburger {
+    &__logo {
         @include flex();
-        font-size: 4rem;
-    }
-    @include tablet {
-        &__hamburger {
-            order: 1;
-        }
+        font-size: $font-size-xl;
 
-        &__logo {
+        @include tablet {
             order: 2;
             position: absolute;
             left: 50%;
+            transform: translateX(-50%);
         }
 
-        &__auth {
-            order: 3;
-            @include flex();
+        @include desktop {
+            order: 1;
         }
     }
-    @include desktop {
-        &__logo {
+
+    &__hamburger {
+        z-index: map-get($map: $z-index, $key: hamburger);
+        @include flex();
+        font-size: $font-size-xl;
+
+        @include tablet {
             order: 1;
         }
 
-        &__nav-links {
-            order: 2;
-        }
-
-        &__auth {
-            order: 3;
-        }
-
-        &__hamburger {
+        @include desktop {
             display: none;
         }
     }
 
-    @include tablet {
-        &__auth {
+    &__auth {
+        font-size: $font-size-md;
+        @include flex($flex-direction: column, $gap: 1rem);
+
+        @include tablet {
+            order: 3;
             display: block;
-            @include flex($gap: 0.2rem);
+            flex-direction: row;
             flex-wrap: nowrap;
+            position: relative;
+        }
+
+        @include desktop {
+            flex-direction: row;
+            order: 3;
         }
     }
 
-    &__auth {
-        font-size: 1.4rem;
-    }
-
-    &__nav-links {
-        z-index: $z-index-nav-links;
+    .nav-links {
+        z-index: map-get($map: $z-index, $key: nav-links);
         position: absolute;
         box-shadow: $box-shadow-hover-effect;
         top: 10rem;
         @include flex($flex-direction: column, $gap: 5rem);
-
         width: 50%;
         padding: 5rem 0;
         height: fit-content;
         right: 2rem;
         border-radius: 2rem;
+        transform: translate3d(100%, 0, 0), translate3d(-100%, 0, 0);
+        opacity: 0;
+        transition:
+            transform 0.3s ease,
+            opacity 0.3s ease;
+
         a {
-            font-size: 1.4rem;
+            font-size: $font-size-md;
             color: inherit;
-        }
-        a:hover {
-            color: $black;
-            transition: 0.5s;
+
+            &:hover {
+                color: $black;
+                transition: 0.5s;
+            }
         }
 
         .nav-links__container {
             @include flex($flex-direction: column, $gap: 5rem);
         }
 
-        transition:
-            transform 0.3s ease,
-            opacity 0.3s ease;
-        transform: translateX(100%);
-        opacity: 0;
-
         &--open {
             transform: translateX(0);
             opacity: 1;
             pointer-events: auto;
         }
-    }
 
-    &__auth {
-        @include flex($flex-direction: column);
-    }
-
-    @include tablet {
-        &__nav-links {
+        @include tablet {
             padding: 0;
             opacity: 1;
             transition: none;
@@ -121,7 +114,6 @@
             max-width: fit-content;
             white-space: nowrap;
             position: relative;
-
             box-shadow: none;
             @include flex(space-between, $gap: 5%);
             border-radius: 0;
@@ -131,42 +123,30 @@
             order: 3;
         }
 
-        &__nav-links .nav-links__container {
-            position: absolute;
-            z-index: $z-index-nav-links;
-            width: fit-content;
-            top: 8rem;
-            box-shadow: $box-shadow-hover-effect;
-            @include flex($flex-direction: column, $gap: 5rem);
-            height: fit-content;
-            right: 50vw;
-            border-radius: 2rem;
-            padding: 50% 55%;
-        }
-
-        &__auth {
-            position: relative;
-            @include flex;
-        }
-    }
-    @include tablet {
-        &__nav-links .nav-links__container {
-            transition:
-                transform 0.3s ease,
-                opacity 0.3s ease;
-            transform: translateX(-100%);
-            opacity: 0;
-
-            &--open {
-                transform: translateX(0);
-                opacity: 1;
-                pointer-events: auto;
+        @include tablet {
+            .nav-links__container {
+                position: absolute;
+                width: 100vw;
+                top: 8rem;
+                box-shadow: $box-shadow-hover-effect;
+                @include flex($gap: 10%);
+                height: fit-content;
+                padding: 4rem;
+                transition:
+                    transform 0.3s ease,
+                    opacity 0.3s ease;
+                transform: translateX(-100%);
+                opacity: 0;
+                right: -6.4rem;
+                &--open {
+                    transform: translateX(0);
+                    opacity: 1;
+                    pointer-events: auto;
+                }
             }
         }
-    }
 
-    @include desktop {
-        &__nav-links {
+        @include desktop {
             padding: 0;
             opacity: 1;
             transition: none;
@@ -174,37 +154,27 @@
             width: 70%;
             white-space: nowrap;
             position: relative;
-
             box-shadow: none;
             @include flex(space-between);
             border-radius: 0;
             top: auto;
             left: auto;
             right: auto;
+            order: 2;
         }
 
-        &__nav-links .nav-links__container {
-            @include flex($gap: 6.4rem);
-        }
-        &__auth {
-            @include flex();
+        @include desktop {
+            .nav-links__container {
+                @include flex($gap: 6.4rem);
+            }
         }
     }
 
     &__signup:hover {
         background-color: $french-rose;
-        transition: 0.7s;
-        box-shadow: $box-shadow-hover-effect;
     }
 
     &__login:hover {
         color: $slate-blue;
-        transition: 0.7s;
-        box-shadow: $box-shadow-hover-effect;
     }
-}
-
-// This class : no-scroll is to handle scroll when sidebar is open
-.no-scroll {
-    overflow: hidden;
 }
