AR_RU_03 : Hero : MAde hero section using all the components and utility classes, fixed responsiveness issues

--- a/src/styles/abstracts/_utilities.scss
+++ b/src/styles/abstracts/_utilities.scss
@@ -3,6 +3,10 @@
 .circular-md {
     font-family: $circular-md;
 }
+
+.inter {
+    font-family: $inter;
+}
 .overflow-hidden {
     overflow: hidden;
 }
