--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -1,104 +1,156 @@
 @use '../abstracts/mixins/' as *;
 @use '../abstracts/variables/' as *;
+@use '../components/button';
 
 .hero {
+    position: relative;
     padding-top: $header-h-mobile;
     @include flex($flex-direction: column, $gap: 3.2rem);
     @include tablet {
-        gap: 8.5rem;
+        padding-top: $header-h-tablet;
     }
 
     @include desktop {
         padding-top: $header-h-desktop;
         flex-direction: row-reverse;
+        flex-wrap: nowrap;
         justify-content: space-between;
+    }
 
-        &__img {
-            width: 77.2rem;
-            height: 71.3rem;
+    &__triangles {
+        display: none;
+        @include tablet {
+            display: block;
+            position: absolute;
+            left: 4rem;
+            bottom: 0;
+        }
+        @include desktop {
+            display: block;
+            position: absolute;
+            left: 4rem;
+            bottom: -8rem;
+        }
+    }
+
+    &__img {
+        padding-top: 4rem;
+
+        @include tablet {
+            padding: 6rem 5rem 0 5rem;
         }
     }
 
     &__content {
-        @include flex($flex-direction: column, $gap: 2.2rem);
+        @include flex($flex-direction: column, $gap: 2rem);
+        padding: 0 1rem;
+        text-align: center;
+        line-height: normal;
+
         @include tablet {
-            gap: 5rem;
+            gap: 4.4rem;
+            padding: 2rem 16%;
         }
 
         @include desktop {
+            text-align: left;
+            align-items: baseline;
+            gap: 5rem;
             width: 42rem;
-            height: 57rem;
-
-            @include flex(baseline, baseline, column, 4.3rem);
         }
     }
 
     &__explore-button {
-        box-shadow: $box-shadow-hover-effect;
-        font-size: 1.4rem;
+        font-size: $font-size-xs;
+        border: 1px solid #eeeeee;
+        i {
+            font-size: 2.4rem;
+        }
+
+        @include desktop {
+            font-size: $font-size-s;
+        }
     }
 
     &__heading {
-        font-weight: 400;
-        font-size: 4rem;
-        padding: 0 2rem;
-        @include desktop {
-            font-size: 6.9rem;
-        }
-    }
-
-    @include tablet {
-        &__heading {
-            font-size: 5.6rem;
-            padding: 0 15rem;
-        }
-    }
-
-    &__sub-heading {
-        font-size: 1.6rem;
+        font-size: $font-size-xl;
         @include tablet {
-            font-size: 1.8rem;
-            padding: 0 23rem;
-        }
-    }
-
-    &__heading,
-    &__sub-heading {
-        text-align: center;
-        line-height: normal;
-        @include desktop {
-            text-align: left;
+            font-size: $font-size-xxl;
             padding: 0;
         }
+        @include desktop {
+            font-size: $font-size-xxxl;
+        }
     }
-}
-
-.actions {
-    width: 100%;
-    @include flex($flex-direction: column, $gap: 2.4rem);
-    &__get-started,
-    &__watch-demo {
+    &__sub-heading {
+        font-size: $font-size-xs;
+        @include tablet {
+            padding: 0 6rem;
+            font-size: $font-size-md;
+        }
+        @include desktop {
+            padding: 0 4rem 0 0;
+            font-size: $font-size-md;
+        }
+    }
+    &__buttons {
+        font-size: $font-size-xs;
+    }
+    .actions {
+        padding-top: 2rem;
         width: 100%;
-        font-size: 1.4rem;
-    }
-
-    &__watch-demo {
-        border: 1px solid #eeeeee;
-    }
-
-    @include tablet {
-        width: fit-content;
-        @include flex;
+        @include flex(
+            $flex-direction: column,
+            $gap: 2.4rem,
+            $flex-wrap: nowrap
+        );
         white-space: nowrap;
-    }
 
-    @include desktop {
-        @include flex;
+        @include tablet {
+            width: fit-content;
+            flex-direction: row;
+        }
+        @include desktop {
+            width: fit-content;
+            flex-direction: row;
+        }
+        &__get-started {
+            @extend .primary-button;
+            width: 100%;
+            padding: 2.4rem 3.2rem;
+            @include tablet {
+                width: fit-content;
+                padding: 1.6rem 3.2rem;
+            }
+            @include desktop {
+                width: fit-content;
+                padding: 1.6rem 3.2rem;
+            }
+        }
+        &__watch-demo {
+            border: 1px solid #eeeeee;
+            @extend .primary-button;
+            width: 100%;
+            padding: 2.4rem 3.2rem;
+            i {
+                font-size: 2.4rem;
+                @include tablet {
+                    font-size: 2rem;
+                }
+            }
+            @include tablet {
+                width: fit-content;
+                padding: 1.6rem 3.2rem;
+            }
+            @include desktop {
+                width: fit-content;
+                padding: 1.6rem 3.2rem;
+            }
+        }
     }
 }
-
 .co-partners {
-    padding-top: 5rem;
+    padding-top: 6rem;
     width: 100%;
     @include flex(center, center);
     flex-wrap: wrap;
@@ -107,9 +159,8 @@
         height: 2rem;
         width: fit-content;
     }
-
     @include tablet {
-        padding: 14.4rem 20.4rem;
+        padding: 13.4rem 19.5rem;
         width: 100%;
         @include flex(center, center);
         flex-wrap: wrap;
@@ -119,12 +170,10 @@
             width: fit-content;
         }
     }
-
     @include desktop {
-        padding: 20rem 20rem;
+        padding: 10rem 0rem;
         width: 100%;
-        @include flex;
-        gap: 5rem;
+        @include flex($justify-content: space-around);
         flex-wrap: wrap;
         img {
             height: 3.2rem;
